--- a/deepin-terminal.desktop
+++ b/deepin-terminal.desktop
@@ -15,11 +15,11 @@ X-Deepin-Vendor=deepin
 # Do not manually modify!
 Comment[am_ET]=የ ትእዛዝ መስመር ይጠቀሙ
 Comment[ar]=استخدام سطر الأوامر
-Comment[ast]=Usa la llinia comandos
+Comment[ast]=Usa la llinia de comandos
 Comment[az]=Əmr sətirindən istifadə et
 Comment[bg]=Използване на команден ред
 Comment[ca]=Useu la línia d'ordres
-Comment[cs]=Používejte příkazový řádek
+Comment[cs]=Použít příkazový řádek
 Comment[da]=Brug kommandolinjen
 Comment[de]=Kommandozeile benutzen
 Comment[el]=Χρήση της γραμμής εντολών
@@ -27,23 +27,25 @@ Comment[en_AU]=Use the command line
 Comment[eo]=Uzi la komandlinio
 Comment[es]=Usar la línea de comando
 Comment[es_419]=Usar la línea de comandos
+Comment[fa]=استفاده از خط فرمان
 Comment[fi]=Käytä komentoriviä
 Comment[fr]=Utiliser la ligne de commande
 Comment[gl_ES]=Empregar a liña de comandos
 Comment[he]=השתמש בשורת פקודה
 Comment[hi_IN]=आदेश रेखा का उपयोग करें
 Comment[hr]=Koristi naredbeni redak
-Comment[hu]= A parancssor használata
+Comment[hu]= Parancssor használata
 Comment[hy]=Օգտագործել հրամանների տողը
 Comment[id]=Gunakan baris perintah
 Comment[it]=Usa linea di comando
 Comment[ja]=コマンドラインを使用する
-Comment[ko]=명령어 사용
+Comment[ko]=명령 행 사용
 Comment[lt]=Naudoti komandų eilutę
 Comment[ml]=കമാൻഡ് ലൈൻ ഉപയോഗിക്കുക
+Comment[mn]=Комманд мѳр ашиглах
 Comment[ms]=guna baris perintah
 Comment[nb]=Bruk kommandolinjen
-Comment[nl]=De opdrachtregel gebruiken
+Comment[nl]=Gebruik de opdrachtregel
 Comment[pam]=Gamitan ing command line
 Comment[pl]=Użyj wiersza poleceń
 Comment[pt]=Utilize a linha de comandos
@@ -93,9 +95,10 @@ GenericName[ml]=ടെർമിനൽ
 GenericName[mn]=Терминал
 GenericName[ms]=Terminal
 GenericName[nb]=Terminal
+GenericName[ne]=टर्मिनल
 GenericName[nl]=Terminal
 GenericName[pl]=Terminal
-GenericName[pt]=Abrir Terminal
+GenericName[pt]=Terminal
 GenericName[pt_BR]=Terminal
 GenericName[ro]=Terminalul
 GenericName[ru]=Терминал
@@ -112,17 +115,39 @@ GenericName[vi]=Đầu cuối
 GenericName[zh_CN]=终端
 GenericName[zh_HK]=終端機
 GenericName[zh_TW]=終端機
-Keywords[ca]=shell;intèrpretd'ordres;ordre;línead'ordres;
-Keywords[it]=shell;prompt;command;commandline;
+Keywords[ar]=shell;prompt;command;commandline;
+Keywords[ast]=shell;comandu;llinia;llinia de comandos;comandos;
+Keywords[bg]=shell;prompt;command;commandline;
+Keywords[ca]=shell;intèrpret;intèrpret d'ordres;ordres;ordre;línia d'ordres;
+Keywords[cs]=shell;prompt;příkaz;příkazový řádek;
+Keywords[da]=skal;prompt;kommando;kommandolinje;
+Keywords[de]=shell;prompt;command;commandline;
+Keywords[el]=κέλυφος;προτροπή;εντολή;γραμμή-εντολών;
+Keywords[es]=shell;prompt;command;comando;commandline;lineadecomandos;
+Keywords[es_419]=shell;prompt;command;commandline;
+Keywords[fa]=پوسته ؛ سریع ؛ فرمان ؛ خط فرمان ؛
+Keywords[fi]=shell;prompt;command;commandline;
+Keywords[fr]=shell;prompt;command;commandline;
+Keywords[hu]=shell;prompt;parancs;parancssor
+Keywords[id]=shell;prompt;perintah;barisperintah;
+Keywords[it]=shell;prompt;command;commandline;terminale;cmd;script;bash;
+Keywords[ko]=shell;prompt;command;commandline;쉘;프롬프트;명령;명령행;
 Keywords[lt]=apvalkalas;užklausa;komanda;komandų eilutė;eilutė;komandos;
+Keywords[ms]=shell;prom;perintah;barisperintah;
 Keywords[nl]=shell;prompt;opdracht;opdrachtregel;
+Keywords[pl]=powłoka;zapytanie;polecenie;wiersz;poleceń;
+Keywords[pt]=shell;prompt;comando;commandline;
 Keywords[pt_BR]=shell;prompt;command;commandline;
+Keywords[ro]=shell;prompt;comandă;liniecomandă;
 Keywords[ru]=shell;prompt;command;commandline;
 Keywords[sk]=shell;prompt;command;commandline;
 Keywords[sq]=shell;prompt;command;commandline;
+Keywords[sr]=shell;prompt;команда;командна линија;
+Keywords[sv]=shell;prompt;command;commandline;
 Keywords[tr]=shell;prompt;command;commandline;kabuk;komut;komutsatırı;
 Keywords[uk]=shell;prompt;command;commandline;оболонка;запит;команда;командна;рядок;
 Keywords[zh_CN]=shell;prompt;command;commandline;
+Keywords[zh_TW]=shell;prompt;command;commandline;提示;指令;指令列;
 Name[am_ET]=የ ዲፕኢን ተርሚናል
 Name[ar]=طرفية ديبين
 Name[ast]=Deepin Terminal
@@ -137,7 +162,8 @@ Name[en_AU]=Deepin Terminal
 Name[eo]=Deepin terminalo
 Name[es]=Terminal Deepin
 Name[es_419]=Terminal Deepin
-Name[fi]=Deepin-terminaali
+Name[fa]=ترمینال دیپین
+Name[fi]=Deepin pääte
 Name[fil]=Deepin Terminal
 Name[fr]=Deepin Terminal
 Name[gl_ES]=Terminal
@@ -147,17 +173,18 @@ Name[hr]=Deepin terminal
 Name[hu]=Deepin Terminál
 Name[hy]=Deepin Տերմինալ
 Name[id]=Terminal Deepin
-Name[it]=Deepin Terminal
-Name[ja]=Deepin Terminal
+Name[it]=Terminale di Deepin
+Name[ja]=Deepin ターミナル
 Name[ko]=Deepin 터미널
 Name[lt]=Deepin terminalas
 Name[ml]=ഡീപിൻ ടെർമിനൽ
+Name[mn]=Дээпин Терминал
 Name[ms]=Terminal Deepin
 Name[nb]=Deepin terminal
 Name[nl]=Deepin Terminal
 Name[pam]=Deepin Terminal
 Name[pl]=Terminal Deepin
-Name[pt]=Deepin Terminal
+Name[pt]=Terminal Deepin
 Name[pt_BR]=Terminal Deepin
 Name[ro]=Terminalul Deepin
 Name[ru]= Терминал Deepin 
@@ -172,7 +199,7 @@ Name[uk]=Термінал Deepin
 Name[vi]=Deepin Terminal
 Name[zh_CN]=终端
 Name[zh_HK]=終端機
-Name[zh_TW]=Terminal
+Name[zh_TW]=終端器
 
 [NewWindow Shortcut Group]
 Exec=deepin-terminal
@@ -180,21 +207,42 @@ Name=New Window
 
 # Translations:
 # Do not manually modify!
+Name[ar]=نافذة جديدة
 Name[ast]=Ventana nueva
+Name[bg]=Нов прозорец
 Name[ca]=Finestra nova
+Name[cs]=Nové okno
+Name[da]=Nyt vindue
+Name[de]=Neues Fenster
+Name[el]=Νέο παράθυρο
+Name[es]=Nueva ventana
+Name[es_419]=Nueva ventana
+Name[fa]=پنجره جدید
+Name[fi]=Uusi ikkuna
 Name[fr]=Nouvelle fenêtre
+Name[hr]=Novi prozor
 Name[hu]=Új ablak
+Name[id]=Jendela Baru
 Name[it]=Nuova finestra
+Name[ja]=新しいウィンドウ
+Name[ko]=새 창
 Name[lt]=Naujas langas
+Name[mn]=Шинэ Цонх
+Name[ms]=Terminal Baharu
 Name[nl]=Nieuw venster
+Name[pl]=Nowe okno
+Name[pt]=Nova janela
 Name[pt_BR]=Nova Janela
+Name[ro]=Fereastră Nouă
 Name[ru]=Новое Окно
 Name[sk]=Nové okno
 Name[sq]=Dritare e Re
 Name[sr]=Нови прозор
+Name[sv]=Nytt fönster
 Name[tr]=Yeni Pencere
 Name[uk]=Нове вікно
 Name[zh_CN]=新建窗口
+Name[zh_TW]=開新視窗
 
 [Quake Shortcut Group]
 Exec=deepin-terminal --quake-mode
@@ -202,17 +250,40 @@ Name=Quake Terminal
 
 # Translations:
 # Do not manually modify!
+Name[ar]=طرفية كواك
 Name[ast]=Terminal Quake
+Name[bg]=Quake терминал
 Name[ca]=Terminal Quake
+Name[cs]=Vysouvací terminál (quake)
+Name[da]=Quake-terminal
+Name[de]=Quake Terminal
+Name[el]=Τερματικό "Quake"
+Name[es]=Terminal Quake
+Name[es_419]=Terminal en modo Quake
+Name[fa]=ترمینال  Quake
+Name[fi]=Quake pääte
+Name[fr]=Terminal Quake
+Name[hr]=Quake terminal
+Name[hu]=Quake Terminál
+Name[id]=Terminal Quake
 Name[it]=Terminale in primo piano
+Name[ja]=ターミナルを振動させる
+Name[ko]=퀘이크 터미널
 Name[lt]=Quake terminalas
+Name[mn]=Куаке Терминал
+Name[ms]=Terminal Quake
 Name[nl]=Quake-terminal
+Name[pl]=Terminal Quake
+Name[pt]=Terminal deslizante
 Name[pt_BR]=Terminal Quake
+Name[ro]=Terminal Quake
 Name[ru]=Выпадающий Терминал
 Name[sk]=Quake terminál
 Name[sq]=Terminal Quake
 Name[sr]=Спуштајући терминал
+Name[sv]=Quake Terminal
 Name[tr]=Quake Uçbirim
 Name[uk]=Термінал Quake
 Name[zh_CN]=雷神终端
+Name[zh_TW]=雷神模式終端器
 
