--- a/resources/other/default-config.json
+++ b/resources/other/default-config.json
@@ -283,7 +283,7 @@
                         },
                         {
                             "key": "blurred_background",
-                            "text": "Blurred background",
+                            "text": "Blur background",
                             "type": "checkbox",
                             "default": "false"
                         },
