--- a/debian/control
+++ b/debian/control
@@ -2,12 +2,12 @@ Source: deepin-terminal-reborn
 Section: utils
 Priority: optional
 Maintainer: Deepin Terminal <terminal@deepin.com>
-Build-Depends: debhelper (>= 9), pkg-config, qt5-default, qttools5-dev-tools, qtbase5-private-dev, libdtkwidget-dev, lxqt-build-tools, autoconf, automake, autopoint, autotools-dev, dh-autoreconf, dh-strip-nondeterminism, dwz, libfile-stripnondeterminism-perl, libkf5windowsystem-dev, libsigsegv2, libtool, libutf8proc-dev, m4, po-debconf
+Build-Depends: debhelper (>= 9), cmake, pkg-config, qt5-default, qtbase5-dev, qttools5-dev-tools, qtbase5-private-dev, libdtkwidget-dev, lxqt-build-tools (>= 0.6.0~), libutf8proc-dev
 Standards-Version: 3.9.8
 Homepage: https://www.deepin.com/
 
 Package: deepin-terminal-reborn
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, expect
+Depends: ${shlibs:Depends}, ${misc:Depends}, expect, zssh
 Description: deepin terminal
  Deepin Terminal
