--- a/deepin-terminal.desktop
+++ b/deepin-terminal.desktop
@@ -6,7 +6,7 @@ GenericName=Terminal
 Icon=deepin-terminal
 Keywords=shell;prompt;command;commandline;
 Name=Deepin Terminal
-StartupNotify=true
+StartupNotify=false
 TryExec=deepin-terminal
 Type=Application
 X-Deepin-Vendor=deepin
