--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
    {
        "type": "homebrew",
-       "3rdparty": ["./terminalwidget"],
+       "3rdparty": ["./3rdparty"],
        "ignore": ["translations", "debian", "color-schemes", "kb-layouts", "LineFont.src", "CMakeLists.txt", "README", "README.md", "CHANGELOG", "COPYING-CMAKE-SCRIPTS", "LICENSE", "LICENSE.*", "*.keytab", "*.spec", "*.cmake", "*.desktop", "./.tx", "*.qrc", "*.svg", "*.png", "*.qm", "*.ts"],
        "license": ["GPLv3"]
    }
