--- a/.tx/config
+++ b/.tx/config
@@ -6,7 +6,7 @@ mode = developer
 [deepin-terminal.deepin-terminal]
 file_filter = translations/deepin-terminal_<lang>.ts
 source_file = translations/deepin-terminal.ts
-source_lang = en
+source_lang = en_US
 type = QT
 
 [deepin-terminal.deepin-terminal-desktop]
