fix: ctrl+shift+?快捷键以及设置中关闭其他工作区未显示中文
Description: 修改json中的英文使他和QObject下的翻译对应

Log: ctrl+shift+?快捷键以及设置中关闭其他工作区未显示中文

link: fix#30595 https://pms.uniontech.com/zentao/bug-view-30595.html

--- a/src/assets/other/default-config.json
+++ b/src/assets/other/default-config.json
@@ -112,7 +112,7 @@
                         },
                         {
                             "key": "close_other_workspace",
-                            "name": "Close other workspace",
+                            "name": "Close other workspaces",
                             "type": "shortcut",
                             "default":  "Ctrl+W"
                         },
