--- a/debian/control
+++ b/debian/control
@@ -1,4 +1,4 @@
-Source: deepin-terminal-reborn
+Source: deepin-terminal
 Section: utils
 Priority: optional
 Maintainer: Deepin Terminal <terminal@deepin.com>
@@ -6,7 +6,7 @@ Build-Depends: debhelper (>= 9), cmake, pkg-config, qt5-default, qtbase5-dev, qt
 Standards-Version: 3.9.8
 Homepage: https://www.deepin.com/
 
-Package: deepin-terminal-reborn
+Package: deepin-terminal
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}, expect, zssh
 Description: deepin terminal
