chore: CMake和.project.json配置修改
Description:
1. 去除CMake中多余的依赖项
2. .project.json添加".git"
3. 移除translate_generation.sh

Log: Null

link: Null

--- a/.project.json
+++ b/.project.json
@@ -1,6 +1,6 @@
    {
        "type": "homebrew",
        "3rdparty": ["./3rdparty"],
-       "ignore": ["translations", "debian", "color-schemes", "kb-layouts", "LineFont.src", "CMakeLists.txt.user", "README", "README.md", "CHANGELOG", "COPYING-CMAKE-SCRIPTS", "LICENSE", "LICENSE.*", "*.keytab", "*.spec", "*.cmake", "*.desktop", "./.tx", "*.qrc", "*.svg", "*.png", "*.qm", "*.ts"],
+       "ignore": [".git", "translations", "debian", "color-schemes", "kb-layouts", "LineFont.src", "CMakeLists.txt.user", "README", "README.md", "CHANGELOG", "COPYING-CMAKE-SCRIPTS", "LICENSE", "LICENSE.*", "*.keytab", "*.spec", "*.cmake", "*.desktop", "./.tx", "*.qrc", "*.svg", "*.png", "*.qm", "*.ts"],
        "license": ["GPLv3"]
    }
