fix: BUG#33733 Shortcut keys in the workspace and ctrl+shift+? shortcut keys in the settings, you need to change Advanced to Others consistent with the copy
Description: Change "advanced" to "others" and add Chinese Translation

Log: 修复BUG#33733设置中工作区快捷键以及ctrl+shift+?快捷键，需要将Advanced改成与文案一致的Others

link: https://pms.uniontech.com/zentao/bug-view-33733.html

--- a/src/assets/other/default-config.json
+++ b/src/assets/other/default-config.json
@@ -180,7 +180,7 @@
                 },
                 {
                     "key" : "advanced",
-                    "name" : "Advanced",
+                    "name" : "Others",
                     "options" : [
                         {
                             "key": "switch_fullscreen",
