fix: bug#14551 服务器版本终端中设置界面透明度无效
Description: 服务器版本直接隐藏了透明度、模糊背景选项，专业版/桌面版/个人版等根据窗口特效是否开启做了一个判断，
判断是特效模式下启用透明度和模糊背景设置项，判断是普通模式禁用透明度和模糊背景设置项

Log: 【服务器uos】【arm64】【final】【dde】【预装应用】【终端】终端中设置界面透明度无效

link: https://pms.uniontech.com/zentao/bug-view-14551.html

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,6 +54,7 @@ find_package(Qt5Network REQUIRED)
 pkg_search_module(DtkWidget REQUIRED dtkwidget)
 pkg_search_module(DtkGui REQUIRED dtkgui)
 pkg_search_module(DtkCore REQUIRED dtkcore)
+pkg_check_modules(DFrameworkDBus REQUIRED dframeworkdbus)
 
 # Compile definitions for TerminalWidget
 # So we can use QT_VERSION_CHECK
@@ -88,6 +89,7 @@ set(LINK_LIBS
     ${DtkWidget_LIBRARIES}
     ${DtkCore_LIBRARIES}
     ${DtkGUI_LIBRARIES}
+    ${DFrameworkDBus_LIBRARIES}
 )
 
 # Populate a CMake variable with the sources
@@ -238,7 +240,8 @@ target_include_directories(${EXE_NAME} PUBLIC ${Qt5Widgets_LIBRARIES}
                                               ${PROJECT_BINARY_DIR}
                                               ${DtkWidget_INCLUDE_DIRS}
                                               ${DtkCore_LIBRARIES}
-                                              ${DtkGUI_INCLUDE_DIRS})
+                                              ${DtkGUI_INCLUDE_DIRS}
+                                              ${DFrameworkDBus_INCLUDE_DIRS})
 
 target_link_libraries (deepin-terminal ${LINK_LIBS} terminalwidget5)
 
