--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: deepin-terminal
 Section: utils
 Priority: optional
 Maintainer: Deepin Terminal <terminal@deepin.com>
-Build-Depends: debhelper (>= 9), cmake, pkg-config, qt5-default, qtbase5-dev, qttools5-dev-tools, qtbase5-private-dev, libdtkwidget-dev, lxqt-build-tools (>= 0.6.0~), libutf8proc-dev
+Build-Depends: debhelper (>= 9), cmake, pkg-config, qt5-default, qtbase5-dev, qttools5-dev-tools, qtbase5-private-dev, libdtkwidget-dev, libdframeworkdbus-dev, lxqt-build-tools (>= 0.6.0~), libutf8proc-dev
 Standards-Version: 3.9.8
 Homepage: https://www.deepin.com/
 
