feat: 重定义系统默认快捷键
Description:
　　　　　查找：      Ctrl+F -> Ctrl+Alt+F
　　关闭工作区：Ctrl+Shift+W -> Alt+W
关闭其它工作区：      Ctrl+W -> Ctrl+Alt+W
　　　关闭窗口：  Ctrl+Alt+Q -> Alt+Q
　关闭其它窗口：Ctrl+Shift+Q -> Ctrl+Alt+Q
　选择上面窗口：       Alt+K -> Alt+Up
　选择下面窗口：       Alt+J -> Alt+Down
　选择左面窗口：       Alt+H -> Alt+Left
　选择右面窗口：       Alt+L -> Alt+Right
　　自定义命令：　　　 Ctrl+[ -> Ctrl+Ins
　　　远程管理：      Ctrl+/ -> Ctrl+Del
　　选择工作区：　　　 Alt1~N -> Ctrl+Shift+1~N

Log: 重定义系统默认快捷键

link:

--- a/src/assets/other/default-config.json
+++ b/src/assets/other/default-config.json
@@ -66,7 +66,7 @@
                             "key": "find",
                             "name": "Find",
                             "type": "shortcut",
-                            "default":  "Ctrl+F"
+                            "default":  "Ctrl+Alt+F"
                         },
                         {
                             "key": "zoom_in",
@@ -108,13 +108,13 @@
                             "key": "close_workspace",
                             "name": "Close workspace",
                             "type": "shortcut",
-                            "default":  "Ctrl+Shift+W"
+                            "default":  "Alt+W"
                         },
                         {
                             "key": "close_other_workspace",
                             "name": "Close other workspaces",
                             "type": "shortcut",
-                            "default":  "Ctrl+W"
+                            "default":  "Ctrl+Alt+W"
                         },
                         {
                             "key": "previous_workspace",
@@ -144,37 +144,37 @@
                             "key": "select_upper_window",
                             "name": "Select upper window",
                             "type": "shortcut",
-                            "default":  "Alt+K"
+                            "default":  "Alt+Up"
                         },
                         {
                             "key": "select_lower_window",
                             "name": "Select lower window",
                             "type": "shortcut",
-                            "default":  "Alt+J"
+                            "default":  "Alt+Down"
                         },
                         {
                             "key": "select_left_window",
                             "name": "Select left window",
                             "type": "shortcut",
-                            "default":  "Alt+H"
+                            "default":  "Alt+Left"
                         },
                         {
                             "key": "select_right_window",
                             "name": "Select right window",
                             "type": "shortcut",
-                            "default":  "Alt+L"
+                            "default":  "Alt+Right"
                         },
                         {
                             "key": "close_window",
                             "name": "Close window",
                             "type": "shortcut",
-                            "default":  "Ctrl+Alt+Q"
+                            "default":  "Alt+Q"
                         },
                         {
                             "key": "close_other_windows",
                             "name": "Close other windows",
                             "type": "shortcut",
-                            "default":  "Ctrl+Shift+Q"
+                            "default":  "Ctrl+Alt+Q"
                         }
                     ]
                 },
@@ -204,13 +204,13 @@
                             "key": "custom_command",
                             "name": "Custom commands",
                             "type": "shortcut",
-                            "default":  "Ctrl+["
+                            "default":  "Ctrl+Ins"
                         },
                         {
                             "key": "remote_management",
                             "name": "Remote management",
                             "type": "shortcut",
-                            "default":  "Ctrl+/"
+                            "default":  "Ctrl+Del"
                         }
                     ]
                 }
