feat: 重定义系统默认快捷键(刚有两处错误）
Description:
　　　　　查找：      Ctrl+F -> Ctrl+Alt+F
　　关闭工作区：Ctrl+Shift+W -> Alt+W
关闭其它工作区：      Ctrl+W -> Ctrl+Alt+W
　　　关闭窗口：  Ctrl+Alt+Q -> Alt+Q
　关闭其它窗口：Ctrl+Shift+Q -> Ctrl+Alt+Q
　选择上面窗口：       Alt+K -> Alt+Up
　选择下面窗口：       Alt+J -> Alt+Down
　选择左面窗口：       Alt+H -> Alt+Left
　选择右面窗口：       Alt+L -> Alt+Right
　　自定义命令：　　　 Ctrl+[ -> Alt+Ins
　　　远程管理：      Ctrl+/ -> Alt+Del
　　选择工作区：　　　 Alt1~N -> Ctrl+Shift+1~N

Log: 重定义系统默认快捷键

link:

--- a/src/assets/other/default-config.json
+++ b/src/assets/other/default-config.json
@@ -204,13 +204,13 @@
                             "key": "custom_command",
                             "name": "Custom commands",
                             "type": "shortcut",
-                            "default":  "Ctrl+Ins"
+                            "default":  "Alt+Ins"
                         },
                         {
                             "key": "remote_management",
                             "name": "Remote management",
                             "type": "shortcut",
-                            "default":  "Ctrl+Del"
+                            "default":  "Alt+Del"
                         }
                     ]
                 }
