chore: 系统默认快捷键方案更新
Description: 系统默认快捷键方案更新
关闭其它工作区：Ctrl+Alt+W -> Ctrl+Shift+W
  关闭其它窗口：Ctrl+Alt+Q -> Ctrl+Shift+Q

Log: 系统默认快捷键方案更新

link:

--- a/src/assets/other/default-config.json
+++ b/src/assets/other/default-config.json
@@ -114,7 +114,7 @@
                             "key": "close_other_workspace",
                             "name": "Close other workspaces",
                             "type": "shortcut",
-                            "default":  "Ctrl+Alt+W"
+                            "default":  "Ctrl+Shift+W"
                         },
                         {
                             "key": "previous_workspace",
@@ -174,7 +174,7 @@
                             "key": "close_other_windows",
                             "name": "Close other windows",
                             "type": "shortcut",
-                            "default":  "Ctrl+Alt+Q"
+                            "default":  "Ctrl+Shift+Q"
                         }
                     ]
                 },
