chore:新需求 将默认字体设置成Noto Sans Mono
Description: 新需求 将默认字体设置成Noto Sans Mono

Log: 新需求 将默认字体设置成Noto Sans Mono

link: null

--- a/src/assets/other/default-config.json
+++ b/src/assets/other/default-config.json
@@ -20,7 +20,7 @@
                             "key": "font",
                             "name": "Font",
                             "type": "fontcombobox",
-                            "default": "Noto Mono"
+                            "default": "Noto Sans Mono"
                         },
                         {
                             "key": "font_size",
