--- a/debian/control
+++ b/debian/control
@@ -2,12 +2,12 @@ Source: deepin-terminal
 Section: utils
 Priority: optional
 Maintainer: Deepin Terminal <terminal@deepin.com>
-Build-Depends: debhelper (>= 9), cmake, pkg-config, qt5-default, qtbase5-dev, qttools5-dev-tools, qtbase5-private-dev, libdtkwidget-dev, libdframeworkdbus-dev, lxqt-build-tools (>= 0.6.0~), libutf8proc-dev
+Build-Depends: debhelper (>= 9), cmake, pkg-config, qt5-default, qtbase5-dev, qttools5-dev-tools, qtbase5-private-dev, libdtkwidget-dev, libdframeworkdbus-dev, lxqt-build-tools (>= 0.6.0~), libutf8proc-dev, qt-at-spi, at-spi2-core
 Standards-Version: 3.9.8
 Homepage: https://www.deepin.com/
 
 Package: deepin-terminal
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, expect, zssh
+Depends: ${shlibs:Depends}, ${misc:Depends}, expect, zssh, qt-at-spi, at-spi2-core
 Description: deepin terminal
  Deepin Terminal
