build: fix CMakeList.txt compile dependence
Description: 完善CMake构建的编译依赖相关

Log: Null

link: Null

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,8 +54,8 @@ find_package(Qt5Network REQUIRED)
 pkg_search_module(DtkWidget REQUIRED dtkwidget)
 pkg_search_module(DtkGui REQUIRED dtkgui)
 pkg_search_module(DtkCore REQUIRED dtkcore)
-pkg_search_module(atspi-2 REQUIRED atspi-2)
-pkg_search_module(gobject-2.0 REQUIRED gobject-2.0)
+pkg_search_module(GOBJECT REQUIRED gobject-2.0)
+pkg_check_modules(ATSPI atspi-2)
 pkg_check_modules(DFrameworkDBus REQUIRED dframeworkdbus)
 
 # Compile definitions for TerminalWidget
@@ -92,8 +92,8 @@ set(LINK_LIBS
     ${DtkCore_LIBRARIES}
     ${DtkGUI_LIBRARIES}
     ${DFrameworkDBus_LIBRARIES}
-    ${atspi-2_LIBRARIES}
-    ${gobject-2.0_LIBRARIES}
+    ${ATSPI_LIBRARIES}
+    ${GOBJECT_LIBRARIES}
 )
 
 # Populate a CMake variable with the sources
@@ -248,8 +248,8 @@ target_include_directories(${EXE_NAME} PUBLIC ${Qt5Widgets_LIBRARIES}
                                               ${DtkCore_LIBRARIES}
                                               ${DtkGUI_INCLUDE_DIRS}
                                               ${DFrameworkDBus_INCLUDE_DIRS}
-                                              ${atspi-2_INCLUDE_DIRS}
-                                              ${gobject-2.0_INCLUDE_DIRS})
+                                              ${ATSPI_INCLUDE_DIRS}
+                                              ${GOBJECT_INCLUDE_DIRS})
 
 target_link_libraries (deepin-terminal ${LINK_LIBS} terminalwidget5)
 
