feat: sp3 Remote management keyboard interaction
Description: 添加了项，列表，图标按钮的基本控件，支持Tab，上下左右键切换焦点
1) 列表支持增删改项
2）项支持编辑按钮的点击和选中效果
3）图标支持左右键切换焦点

Log: 远程管理的键盘交互

link: Null

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -157,6 +157,10 @@ set (DTNG_CPP_FILES
     src/views/terminputdialog.cpp
     src/views/termcommandlinkbutton.cpp
     src/views/titlebar.cpp
+    src/views/itemwidget.cpp
+    src/views/focusframe.cpp
+    src/views/iconbutton.cpp
+    src/views/listview.cpp
 )
 
 set (DTNG_HEADER_FILES
@@ -216,6 +220,10 @@ set (DTNG_HEADER_FILES
     src/views/termbasedialog.h
     src/views/terminputdialog.h
     src/views/termcommandlinkbutton.h
+    src/views/itemwidget.h
+    src/views/focusframe.h
+    src/views/iconbutton.h
+    src/views/listview.h
 )
 
 set (DTNG_QRC_FILES
