chore: [sp3] 终端单元测试
pagesearchbar、titlebar、shortcutmanager单元测试

Log: 终端单元测试

link: Null

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -380,7 +380,7 @@ add_custom_command(TARGET test
     #1.清理原先的gcov信息
     COMMAND lcov --directory ./CMakeFiles/${PROJECT_NAME_TEST}.dir --zerocounters
     COMMAND lcov --directory ./CMakeFiles/${PROJECT_NAME}.dir --zerocounters
-    #COMMAND ./${PROJECT_NAME_TEST}
+    COMMAND ./${PROJECT_NAME_TEST}
 
     #2.收集gcov信息到.info文件中
     COMMAND lcov --directory . --capture --output-file ./coverageResult/${PROJECT_NAME}_Coverage.info
