chore: [sp2] 解决社区版自定义和远程管理配置文件兼容乱码问题
解决社区版自定义和远程管理配置文件兼容乱码问题

Log: 解决社区版自定义和远程管理配置文件兼容乱码问题

link: Null

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -105,6 +105,7 @@ set(LINK_LIBS
 # TODO: portable headers?
 set (DTNG_CPP_FILES
     src/common/utils.cpp
+    src/common/settingio.cpp
     src/customcommand/customcommanddelegate.cpp
     src/customcommand/customcommanditemmodel.cpp
     src/customcommand/customcommandlist.cpp
@@ -165,6 +166,7 @@ set (DTNG_CPP_FILES
 set (DTNG_HEADER_FILES
     src/common/define.h
     src/common/utils.h
+    src/common/settingio.h
     src/customcommand/customcommanddelegate.h
     src/customcommand/customcommanditemmodel.h
     src/customcommand/customcommandlist.h
