--- a/debian/control
+++ b/debian/control
@@ -9,5 +9,5 @@ Homepage: https://www.deepin.com/
 Package: deepin-terminal
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}, expect, zssh, qt-at-spi, at-spi2-core
-Description: deepin terminal
- Deepin Terminal
+Description: Terminal is an advanced terminal emulator with workspace, multiple windows, remote management, quake mode and other features.
+ Terminal is a terminal emulator with simple interface, rich and powerful functions such as multi-windows, workspace, remote management, Quake mode and etc. You can instantly start and close Terminal smoothly like normal file window, allowing you to input commands with facility and no distractions.
