chore:[sp3] 单元测试-QTermWidget
添加并完善第三方库QTermWidget的单元测试

Log: 单元测试-QTermWidget

link: Null

--- a/3rdparty/terminalwidget/CMakeLists.txt
+++ b/3rdparty/terminalwidget/CMakeLists.txt
@@ -225,6 +225,11 @@ generate_export_header(${TERMINALWIDGET_LIBRARY_NAME}
     EXPORT_MACRO_NAME TERMINALWIDGET_EXPORT
 )
 
+generate_export_header(${TERMINALWIDGET_LIBRARY_NAME}
+    EXPORT_FILE_NAME "${CMAKE_CURRENT_BINARY_DIR}/lib/unit_test_export.h"
+    EXPORT_MACRO_NAME UNIT_TEST_EXPORT
+)
+
 target_include_directories(${TERMINALWIDGET_LIBRARY_NAME}
     PUBLIC
         "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/lib>"
