fix: [all] bug#48930 设置菜单的恢复默认值的修改不对终端的主题进行重置
设置菜单的恢复默认值的修改不对终端的主题进行重置，规避主题色的显示异常

Log: 终端设置中点击恢复默认，再次新建工作区或者窗口，主题色显示错误

link: https://pms.uniontech.com/zentao/bug-view-48930.html
Change-Id: I08e5f6d5750ce259ca2907ae6e0640386a70fbb5
Reviewed-on: http://gerrit.uniontech.com/c/nanjing/deepin-terminal/+/5913
Reviewed-by: sunchengxi <sunchengxi@uniontech.com>
Reviewed-by: <mailman@uniontech.com>
Reviewed-by: zhangmeng <zhangmeng@uniontech.com>
Tested-by: <mailman@uniontech.com>

--- a/src/assets/other/default-config.json
+++ b/src/assets/other/default-config.json
@@ -33,7 +33,7 @@
                         {
                             "key": "theme",
                             "hide": true,
-                            "reset": true,
+                            "reset": false,
                             "default": "Linux"
                         }
                     ]
