--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,6 +36,10 @@ else()
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -O2 -Wl,-O1 -Wl,--gc-sections")
 endif()
 
+#Use deepin-turbo for Performance optimization
+set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -Wl,--as-need -fPIE")
+set(CMAKE_EXE_LINKER_FLAGS "-pie")
+
 configure_file(src/environments.h.in environments.h @ONLY)
 
 # Find the QtWidgets library
