feat: 标签重命名插入控件
 完成标签重命名需求中部分ui

Log: null

Change-Id: I4f83f5d85594b5e3c23cb3e1434b25097f65315f
Reviewed-on: http://gerrit.uniontech.com/c/nanjing/deepin-terminal/+/9540
Reviewed-by: zhangmeng <zhangmeng@uniontech.com>
Reviewed-by: zhaogongqiang <zhaogongqiang@uniontech.com>
Reviewed-by: <mailman@uniontech.com>
Tested-by: <mailman@uniontech.com>
Reviewed-on: http://gerrit.uniontech.com/c/nanjing/deepin-terminal/+/9851

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -157,6 +157,7 @@ set (DTNG_CPP_FILES
     src/views/pagesearchbar.cpp
     src/views/rightpanel.cpp
     src/views/tabbar.cpp
+    src/views/tabrenamewidget.cpp
     src/views/termwidget.cpp
     src/views/termwidgetpage.cpp
     src/views/termbasedialog.cpp
@@ -211,6 +212,7 @@ set (DTNG_HEADER_FILES
     src/views/pagesearchbar.h
     src/views/rightpanel.h
     src/views/tabbar.h
+    src/views/tabrenamewidget.h
     src/views/termwidget.h
     src/views/termwidgetpage.h
     src/views/titlebar.h
