feat: sp4重命名标签需求相关ui
重命名标签需求ui部分的代码

Log: 重命名标签需求ui部分的代码
Change-Id: Ia9b0325912cbf736e42830ee3164153bbcf806ac
Reviewed-on: http://gerrit.uniontech.com/c/nanjing/deepin-terminal/+/10277
Reviewed-by: <mailman@uniontech.com>
Reviewed-by: zhangmeng <zhangmeng@uniontech.com>
Tested-by: <mailman@uniontech.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -163,6 +163,7 @@ set (DTNG_CPP_FILES
     src/views/pagesearchbar.cpp
     src/views/rightpanel.cpp
     src/views/tabbar.cpp
+    src/views/tabrenamedlg.cpp
     src/views/tabrenamewidget.cpp
     src/views/termwidget.cpp
     src/views/termwidgetpage.cpp
@@ -218,6 +219,7 @@ set (DTNG_HEADER_FILES
     src/views/pagesearchbar.h
     src/views/rightpanel.h
     src/views/tabbar.h
+    src/views/tabrenamedlg.h
     src/views/tabrenamewidget.h
     src/views/termwidget.h
     src/views/termwidgetpage.h
